--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "path": "^0.12.7"
   }
 }
