--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "del /q /s dist && tsc && webpack",
-    "test": "mocha"
+    "test": "mocha -r ts-node/register test/**/*.ts "
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.5.4",
     "babel-loader": "^9.1.3",
     "nodemon": "^3.0.1",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "ethers": "^5.7.2",
+    "mocha": "^10.2.0",
     "path": "^0.12.7"
   }
 }
