--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "del /q /s dist && tsc && webpack",
-    "test": "mocha -r ts-node/register test/**/*.ts "
+    "test": "mocha -r ts-node/register test/**/*.ts --timeout 100000 $1"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +25,6 @@
   },
   "dependencies": {
     "ethers": "^5.7.2",
-    "mocha": "^10.2.0",
     "path": "^0.12.7"
   }
 }
