--- a/package.json
+++ b/package.json
@@ -4,8 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && tsc && webpack",
-    "test": "mocha -r ts-node/register test/**/*.ts --timeout 100000 "
+    "build": "wsl rm -rf dist && tsc && webpack",
+    "test": "mocha -r ts-node/register test/**/*.ts --timeout 100000 ",
+    "lint": "eslint . --fix",
+    "format": "prettier --write ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "npm run lint",
+      "npm run format",
+      "git add"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -16,7 +30,15 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.5.4",
     "babel-loader": "^9.1.3",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "husky": "^8.0.3",
+    "install": "^0.13.0",
+    "lint-staged": "^15.2.0",
     "nodemon": "^3.0.1",
+    "npm": "^10.2.5",
+    "prettier": "^3.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
