--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
+    "webpack-cli": "^5.1.4",
     "chai": "^4.3.10",
     "dotenv": "^16.3.1",
+    "mocha": "^10.2.0"
+  },
+  "dependencies": {
     "ethers": "^5.7.2",
-    "mocha": "^10.2.0",
     "path": "^0.12.7"
   }
 }
