--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "wsl rm -rf dist && tsc && webpack",
+    "build": "rm -rf dist && tsc && webpack",
     "test": "mocha -r ts-node/register test/**/*.ts --timeout 100000 ",
     "lint": "eslint . --fix",
     "format": "prettier --write ."
