--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist && tsc && webpack",
-    "test": "mocha -r ts-node/register test/**/*.ts --timeout 100000 ",
+    "test": "mocha -r ts-node/register test/**/CBDC_TEST.ts --timeout 100000 ",
     "lint": "eslint . --fix",
     "format": "prettier --write ."
   },
@@ -33,12 +33,15 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.5.4",
     "babel-loader": "^9.1.3",
+    "chai": "^4.3.10",
+    "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "husky": "^8.0.3",
     "install": "^0.13.0",
     "lint-staged": "^15.2.0",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "npm": "^10.2.5",
     "prettier": "^3.1.1",
@@ -46,10 +49,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "chai": "^4.3.10",
-    "dotenv": "^16.3.1",
-    "mocha": "^10.2.0"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "ethers": "^5.7.2",
