--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist && tsc && webpack",
-    "test": "mocha -r ts-node/register test/**/CBDC_TEST.ts --timeout 100000 ",
-    "lint": "eslint . --fix",
-    "format": "prettier --write ."
+    "test": "mocha -r ts-node/register test/CBDC_Test.ts --timeout 100000 ",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write .",
+    "pretty": "prettier --write \"./**/*.{ts,tsx,json}\"",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install",
+    "commitmsg": "git-commit-msg-linter"
+  },
+  "lint-staged": {
+    "**/*.{ts}": [
+      "npm run lint",
+      "npm run test",
+      "prettier --write --ignore-unknown"
+    ]
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg": "npm run commitmsg"
     }
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "npm run lint",
-      "npm run format",
-      "git add"
-    ]
   },
   "author": "edeXa",
   "repository": {
@@ -30,24 +35,28 @@
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
+    "@types/chai": "^4.3.12",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.5.4",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
     "babel-loader": "^9.1.3",
     "chai": "^4.3.10",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
+    "git-commit-msg-linter": "^5.0.7",
     "husky": "^8.0.3",
     "install": "^0.13.0",
-    "lint-staged": "^15.2.0",
+    "lint-staged": "^15.2.2",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "npm": "^10.2.5",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "validate-branch-name": "^1.3.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
