--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "lint-staged": {
     "**/*.{ts}": [
       "npm run lint",
-      "npm run test",
-      "prettier --write --ignore-unknown"
+      "prettier --write --ignore-unknown",
+      "npm run test"
     ]
   },
   "husky": {
